--- a/ppd.conf
+++ b/ppd.conf
@@ -1,7 +1,7 @@
 # /etc/tuned/ppd.conf file
 [main]
 # The default PPD profile
-default=balanced-modified
+default=balanced
 battery_detection=true
 
 [profiles]   
